마이페이지, 회원가입 파일 이름 수정, css 경로 수정  - mypage -> myPage  - signup -> signUp

--- a/cocain/src/main/webapp/resources/css/user/myPage.css
+++ b/cocain/src/main/webapp/resources/css/user/myPage.css
@@ -76,6 +76,9 @@ nav.text-center > .pagination > li.active > a {
 .row > .modal > .modal-dialog > .modal-content > .panel-primary > .panel-body > form > .input-group {
 	margin-bottom: 25px;
 }
+.row > .modal > .modal-dialog > .modal-content > .panel-primary > .panel-body > form > .input-group > span > .fa-lock {
+	font-size: 21px;
+}
 .row > .modal > .modal-dialog > .modal-content > .panel-primary > .panel-body > form > .input-group > span > .fa-user-secret {
 	font-size: 21px;
 }
