회원가입   - 회원가입 유효성 체크 기능 구현   - user.xml, UserMapper, UserService, UserController, User(VO), signUp.css 추가 및 수정   - signUp.jsp -> signUpForm.jsp 수정

--- a/cocain/src/main/webapp/resources/css/user/signUp.css
+++ b/cocain/src/main/webapp/resources/css/user/signUp.css
@@ -34,8 +34,9 @@ a:hover {
     background-color: rgba(0,0,0,0.75) !important;
     color: white !important;
 }
-.row > .col-md-6 > .panel-primary > .panel-body > form > .input-group {
-	margin-bottom: 25px;
+.row > .col-md-6 > .panel-primary > .panel-body > form > .row {
+	height: 25px; 
+	padding-left: 84px;
 }
 .row > .col-md-6 > .panel-primary > .panel-body > form > .input-group > span > .fa-user {
 	font-size: 21px;
