라이브러리 추가   - 이메일, 시큐리티 xml 추가 및 수정   - spring-security.xml 추가   - spring-security.xml 에 web.xml에 추가 회원가입 폼 수정   - css 수정, jsp 수정

--- a/cocain/src/main/webapp/resources/css/user/signUp.css
+++ b/cocain/src/main/webapp/resources/css/user/signUp.css
@@ -47,3 +47,15 @@ a:hover {
 .row > .col-md-6 > .panel-primary > .panel-body > form > .input-group > span > .fa-user-secret {
 	font-size: 21px;
 }
+#certify > .modal-dialog > .modal-content > .modal-header > button {
+	line-height: 33.64px;
+}
+#certify > .modal-dialog > .modal-content > .modal-body > .input-group > #certifyNo {
+	height: 46.53px;
+}
+#certify > .modal-dialog > .modal-content > .modal-footer {
+	margin-bottom: 0px;
+}
+#certify > .modal-dialog > .modal-content > .modal-footer > button {
+	border-color: rgba(0,0,0,0.75);
+}
