--- a/cocain/src/main/webapp/resources/css/board/quiz/dailyquizlist.css
+++ b/cocain/src/main/webapp/resources/css/board/quiz/dailyquizlist.css
@@ -36,35 +36,43 @@ section{
 .context{
     margin-top:30px;
 }
-a{
-    color:#000515; !important;
+td > a, ul > li > a{
+    color:#000515; 
 }
 h2{
     position:relative;
     top:20px;
     left:30px;
 }
-.pagination{
-    margin:0 25%; 
+ div > .pagination{
+    margin:0 15%; 
 }
 
-.search{
+div > .search{
     text-align:center;
 }
-.search > *{
+div > .search > *{
     height:30px;
     
 }
-.btn-primary{
+div > .btn-primary, * > .buttons > button{
     border:#6d909c;
     background-color:#252c3f;
+    height:30px;
 }
-.nav-pills > li.active > a {
+div > .nav-pills > li.active > a {
   color: #fff;
   background-color: #252c3f;
 }
-.nav > li > a:hover,
-.nav > li > a:focus {
+div > .nav > li > a:hover,
+div > .nav > li > a:focus {
   color: #fff;
   background-color: #6d909c;
 }
+ 
+
+textarea{
+	resize:none;
+}
+
+/* table align */ 
