insert mapper 작성, controller 작성, quiz.xml 추가, jsp 링크 변경 커밋합니다.

--- a/cocain/src/main/webapp/resources/css/board/quiz/dailyquizlist.css
+++ b/cocain/src/main/webapp/resources/css/board/quiz/dailyquizlist.css
@@ -4,7 +4,7 @@
 }
 /* content size */ 
 section{
-	height:1600px; 
+	height:1200px; 
 }
 
 .section{
@@ -73,4 +73,6 @@ div > .nav > li > a:focus {
 textarea{
 	resize:none;
 }
-
+#uqForm > table > tbody > tr > th {
+	width:20%
+}
