--- a/cocain/src/main/webapp/resources/css/user/myPage.css
+++ b/cocain/src/main/webapp/resources/css/user/myPage.css
@@ -54,6 +54,11 @@ nav.text-center > .pagination > li.active > a {
 .media-body > .media-heading > button {
 	margin-bottom: 6px;
 }
+.media-body > .table > tbody > tr > td > div > a {
+    color: rgba(0,0,0,0.8);
+    text-decoration: none;
+    cursor: pointer;
+}
 .panel-body > .media > .media-body > div > div > h3 {
 	display: inline;
 }
