--- a/cocain/src/main/webapp/resources/css/user/signUp.css
+++ b/cocain/src/main/webapp/resources/css/user/signUp.css
@@ -11,6 +11,10 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
+.container > .row:first-child {
+	margin-top: 120px; 	
+	margin-bottom: 120px; 	
+}
 .row:first-child  {
     margin-top: 83px;
     margin-bottom: 62px;
