푸터 버그로 컨테이너 높이조정

--- a/cocain/src/main/webapp/resources/css/user/signUp.css
+++ b/cocain/src/main/webapp/resources/css/user/signUp.css
@@ -11,6 +11,9 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
+.signUpContainer {
+	height: 750px;
+}
 .container > .row:first-child {
 	margin-top: 120px; 	
 	margin-bottom: 120px; 	
