--- a/cocain/src/main/webapp/resources/css/main/mainSearch.css
+++ b/cocain/src/main/webapp/resources/css/main/mainSearch.css
@@ -24,3 +24,6 @@ nav.text-center > .pagination > li.active > a {
 	border-color: rgba(0,0,0,0.8); 
 	background-color: rgba(0,0,0,0.8); 
 }
+.SearchContainer {
+	height: 900px;
+}
